2007-06-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: read a shared library's ELF header to
	    check what cpu is it for. (linux x86, x86_64 and ia64 only)

2007-06-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: use 'File.exist?' instead of deprecated
	    method 'File.exists?'.
	* lib/oci8.rb.in: fix to bind an OCI8::NCLOB value on Oralce 9i.
	    add a mapping to fetch a timestamp column value as an OraDate.

2007-05-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for Oracle 11g.

2007-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add the output of sqlplus to mkmf.log

2007-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: fix errors when compiled by gcc-4.1.
	* NEWS: fix typo.

2007-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0-rc2 and 0.1.16
	* ruby-oci8.spec: fix hardcoded sitearch dir.
	* VERSION: change version to 1.0.0-rc2
	* ext/oci8/extconf.rb, ext/oci8/lob.c: check whether
	    OCILobCreateTemporary is available.
	* dist-files: add test/test_connstr.rb.

2007-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.h: add the error line number
	    in C code to OCIException's backtrace.

2007-04-19  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::NCLOB and add new method to bind
	    CLOB/NCLOB/BLOB.
	* ext/oci8/lob.c: add OCILobLocator#create_temporary.
	* test/test_oci8.rb: add two testcases for BINARY_FLOAT and
	    CLOB/NCLOB/BLOB.

2007-04-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/handle.c, ext/oci8/oci8.h, ext/oci8/stmt.c
	  lib/oci8.rb.in: change the internal structure to enable
	    OCIBind#set(anOCIHandle).

2007-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/lob.c, lib/oci8.rb.in: fix a problem
	    when reading NCLOB.
	    (This problem is reported by Dmitry Zadvornykh.)
	* lib/oci8.rb.in: fix a probmen when fetching BINARY_FLOAT.